--- a/manual_training.ipynb
+++ b/manual_training.ipynb
@@ -17,6 +17,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will be specifying which layers that you want to use to capture style and content of images, so you can run cell below to check all options. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,14 +39,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "style_image_file = \"demo_picasso_music.jpg\"\n",
+    "content_image_file = \"demo_pablo_picasso.jpg\"\n",
+    "\n",
     "BASE_RESULT_PATH = os.path.join(\"images\", \"results\")\n",
     "BASE_TRAINER_PATH = os.path.join(\"images\", \"trainers\")\n",
     "\n",
-    "style_image_path = os.path.join(\"images\", \"styles\", \"demo_picasso_music.jpg\")\n",
-    "content_image_path = os.path.join(\"images\", \"contents\", \"demo_pablo_picasso.jpg\")\n",
+    "style_image_path = os.path.join(\"images\", \"styles\", style_image_file)\n",
+    "content_image_path = os.path.join(\"images\", \"contents\", content_image_file)\n",
     "\n",
     "style_image = src.utils.tf_utils.load_img(style_image_path)\n",
-    "content_image = src.utils.tf_utils.load_img(content_image_path)\n",
+    "content_image = src.utils.tf_utils.load_img(content_image_path)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can define here which layers will be used in training. \n",
+    "- `content_layers` determine on which layers generated image should be **similar to content image**.\n",
+    "Basically lower layers of model capture low level features like edges and textures, so if you pick layer from the beginning as a content layer then generated image will have to looks really similar to the content image. In the opposite to that layers from the end capture high level features like whole objects, so if you pick those layers model will only ensure that the same objects will be included in generated and content images. Typically only one content layer is picked and it is more or less middle layer.\n",
+    "- `style_layers` determine on which layers generated image should be **correlated with style image**. It is hard to say how choice of style layers affects generation process, and usually choosing optimal set of layers requires some experimentation, but rule of thumb says that it is good to pick layers from all abstraction levels of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# work well\n",
     "style_layers = ['block1_conv1', 'block2_conv1', 'block2_conv2', 'block3_conv1', 'block3_conv3', 'block4_conv2', 'block4_conv4', 'block5_conv1', 'block5_conv4']\n",
@@ -62,12 +92,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "type(content_image)"
+    "Loss function used in NST training is a weighted combination of style and content loss, so if you want your image to be more abstract then choose `style_weight` over `content weight`. `noise` parameter tells how much noise will be added to the generated image (content image copy) before training. `1` means \"100%\" noise, so image is basically filled with random values on the beginning. The more noise you add, the freely output can be generated, so it become more abstract.  \n",
+    "If you reduce factors that make generated image more abstract (like high content layer, noise, and style_weight) then generated image could look better, but it also takes much more time to train it well, so it is recommended way when you have GPU acceleration during the training. If you don't have it, then it may be better to increase them and get intreating results fast. "
    ]
   },
   {
